messaging_app/messaging_app/blue_deployment.yaml
# File: messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-blue-deployment
  labels:
    app: messaging-app
    version: blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: messaging-app
      version: blue
  template:
    metadata:
      labels:
        app: messaging-app
        version: blue
    spec:
      containers:
      - name: messaging-app-container
        image: binyamtilahu/messaging-app:2.0 # Updated to version 2.0
        ports:
        - containerPort: 8000
